<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_add_long"
            app:menu="@menu/new_menu_top"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/new_hint_name"
                android:id="@+id/etName"
                >

                <EditText
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginBottom="5dp">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@id/chipFood"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipIcon="@drawable/ic_food_24"
                    app:chipIconTint="@android:color/white"
                    android:text="@string/new_cat_food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLiving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipIcon="@drawable/ic_home_black_24dp"
                    app:chipIconTint="@android:color/white"
                    android:text="@string/new_cat_living" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTransportation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipIcon="@drawable/ic_directions_transit_24"
                    app:chipIconTint="@android:color/white"
                    android:text="@string/new_cat_transportation" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHousehold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipIcon="@drawable/ic_shopping_24"
                    app:chipIconTint="@android:color/white"
                    android:text="@string/new_cat_household" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOccasional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipIcon="@drawable/ic_occasional_24"
                    app:chipIconTint="@android:color/white"
                    android:text="@string/new_cat_occasional" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipNonCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipIcon="@drawable/ic_other_24"
                    app:chipIconTint="@android:color/white"
                    android:text="@string/new_cat_other" />

            </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/new_hint_seccat"
                android:id="@+id/etCat2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="7"
                    android:hint="@string/new_hint_amount"
                    app:suffixText="@string/valute"
                    android:id="@+id/etAmount">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbPaid"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:checked="true"
                    android:text="@string/new_cb_paid" />


            </LinearLayout>

            <TextView
                android:id="@+id/twCalendarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_payment"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <CalendarView
                android:id="@+id/cwDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:firstDayOfWeek="2"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/new_hint_desc"
                android:id="@+id/etDesc">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/new_hint_place">

                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnGPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="2"
                    android:src="@drawable/ic_gps_24" />

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>