<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="15dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/new_hint_name"
        android:id="@+id/etName">

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/confirm_no"
            android:layout_marginHorizontal="15dp"/>

        <Button
        android:id="@+id/btnYes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/confirm_yes"/>

    </LinearLayout>

</LinearLayout>